<resources>

    <string name="app_name">PuttPutt Partner</string>
    <string name="action_settings">Account Settings</string>
    <string name="PPPLogo">PuttPutt Partner Logo</string>
    <string name="findCourse">Find a Course</string>
    <string name="atCourse">Already at a course?</string>
    <string name="autoCheckIn">Auto Check-in</string>
    <string name="manualCheckIn">Manual Check-In</string>
    <string name="joinGame">Join Game</string>
    <string name="onlyDB">Only courses in our database will be shown.</string>
    <string name="searchQuery">Example: Lakeland FL OR 33813</string>
    <string name="search">Search</string>
    <string name="NFC">Scan Check-in tag with NFC</string>
    <string name="or">Or</string>
    <string name="zip">Zip</string>
    <string name="barcode">Check-in with Barcode</string>
    <string name="favCourses">Favorite Courses</string>
    <string name="nearCourses">Nearby Courses</string>
    <string name="unlistedCourse">Unlisted Course</string>
    <string name="courseName">Course Name</string>
    <string name="courseAddress">Address</string>
    <string name="gameID">Game ID</string>
    <string name="city">City</string>
    <string name="createScorecard">Create Scorecard</string>
    <string name="addFavAndPlay">Add Favorite and Play</string>
    <string name="playOnce">Play Once</string>
    <string name="name">Name</string>
    <string name="addPlayer">Add Player</string>
    <string name="state">State</string>
    <string name="holes">Holes</string>
    <string name="totalPar">Total Par:</string>
    <string name="play">Play</string>
    <string name="holeNumber">Hole Number</string>
    <string name="playerName">Player Name</string>
    <string name="par">Par: </string>
    <string name="strokes">Strokes</string>
    <string name="saveScore">Save Score</string>
    <string name="loginFB">Login with Facebook</string>
    <string name="loginTwitter">Login with Twitter</string>
    <string name="linkFB">Link Facebook</string>
    <string name="linkTwitter">Link Twitter</string>
    <string name="SignUp">Sign Up</string>
    <string name="logout">Logout</string>
    <string name="noInput">Enter either: City ST or 5 digit US Zip</string>
    <string name="noResults">No results returned for:</string>
    <string name="courseSearch">Course Search</string>
    <string name="noFavs">You have not added any favorite courses.  They will be displayed here once added.</string>
    <string name="allFields">All fields are required.  Please complete the form above.</string>
    <string name="courseNotSaved">Course could not be saved.  Please check network connection and try again.</string>
    <string name="noGameFound">No game found with GameID: </string>
    <string name="noNFC">No NFC device found. NFC functionality not possible.</string>
    <string name="nfcDisabled">Please enable NFC then press back.</string>
    <string name="player">Player</string>
    <string name="total">Total</string>
    <string name="hole">Hole:</string>
    <string name="gameId">Game ID:</string>
    <string name="enterScore">Enter Score</string>
    <string name="clearScore">Clear Scores</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="guest">Guest</string>
    <string name="maxPlayers">We currently only support 4 players per game.</string>

    <string-array name="states">
        <item>State</item>
        <item>AL</item>
        <item>AK</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>

    <string name="facebook_app_id">404214489740699</string>
    <string-array name="my_facebook_permissions">
        <item>public_profile</item>
        <item>user_friends</item>
    </string-array>

    <string name="parse_app_id">i9UwQFg5VcMPk2AG3pH2uUUxBlRu9nU15hGta31i</string>
    <string name="parse_client_key">aVhjMQvIGlNsZrG06QseXkuFSqIi7lJuGHWzTqKf</string>

    <string name="twitterConsumerKey">92YABardRzPRkIq2xp4z4zeL5</string>
    <string name="twitterConsumerSecret">mSp4kAk1Dl5DU8XN9BTgsxjntVrlaST1qVazeWckfjmnJnaIQ9</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
