<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment_MainActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/img_placeholder"
        android:layout_margin="5dp"
        android:contentDescription="@string/PPPLogo" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/findCourse"
        android:id="@+id/search"
        android:layout_margin="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atCourse"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_marginBottom="5dp"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/autoCheckIn"
        android:id="@+id/autoCheckIn"
        android:layout_margin="5dp"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/manualCheckIn"
        android:id="@+id/manualCheckIn"
        android:layout_margin="5dp"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/joinGame"
        android:id="@+id/joinGame"
        android:layout_margin="5dp"/>

</LinearLayout>
