<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.geeksbsmrt.puttputtpartner.Fragment_AddCourse"
    android:orientation="vertical">

    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/UC_CourseName"
        android:hint="@string/courseName"
        android:layout_marginTop="10dp"
        android:inputType="textCapWords"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/UC_CourseAddress"
        android:inputType="textCapWords"
        android:hint="@string/courseAddress"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/UC_CourseCity"
        android:inputType="textCapWords"
        android:hint="@string/city"/>
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/UC_CourseZip"
        android:layout_gravity="center_horizontal"
        android:hint="@string/zip"
        android:inputType="number"
        />
    <Spinner
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/UC_CourseState"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        />
    <EditText
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/UC_NumberHoles"
        android:inputType="number"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:hint="@string/holes"/>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/createScorecard"
        android:id="@+id/AC_CreateScorecard"
        android:layout_marginBottom="75dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/AC_PlayButtons"
        android:orientation="vertical"
        android:visibility="gone">
        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/addFavAndPlay"
            android:id="@+id/AC_AddFavAndPlay"
            android:layout_marginBottom="15dp"
            />
        <Button
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/playOnce"
            android:id="@+id/AC_PlayOnce"
            />
    </LinearLayout>
</LinearLayout>
