<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.geeksbsmrt.puttputtpartner.Fragment_Options"
    android:orientation="vertical">

    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:id="@+id/OPT_FB"
        android:text="@string/linkFB"/>
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:id="@+id/OPT_Twitter"
        android:text="@string/linkTwitter"/>
    <Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:id="@+id/OPT_ACT"
        android:text="@string/SignUp"/>

</LinearLayout>
