<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.geeksbsmrt.puttputtpartner.Fragment_PlayGame">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:baselineAligned="false">
         <TableLayout
             android:layout_width="150dp"
             android:layout_height="wrap_content"
             android:divider="?android:dividerHorizontal"
             android:showDividers="middle|end"
             android:id="@+id/PG_playerTable"
             >
             <TableRow
                 >
                 <TextView
                     android:text="@string/hole"
                     android:textAppearance="?android:textAppearanceMedium"
                     android:layout_margin="5dp"
                     />
             </TableRow>
             <TableRow
                 >
                 <TextView
                     android:text="@string/par"
                     android:textAppearance="?android:textAppearanceMedium"
                     android:layout_margin="5dp"
                     />
             </TableRow>
             <TableRow
                 >
                <TextView
                    android:text="@string/player"
                    android:layout_margin="5dp"
                    />
             </TableRow>
         </TableLayout>
        <HorizontalScrollView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:scrollbars="none"
            android:overScrollMode="never">

            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/PG_scoreTable"
                android:divider="?android:dividerHorizontal"
                android:showDividers="middle|end"
                >
                <TableRow
                    android:divider="?android:dividerVertical"
                    android:showDividers="beginning|middle|end"
                    android:id="@+id/PG_holeRow"
                    >
                </TableRow>
                <TableRow
                    android:divider="?android:dividerVertical"
                    android:showDividers="beginning|middle|end"
                    android:id="@+id/PG_parRow"
                    >
                </TableRow>
                <TableRow
                    >
                    <TextView
                        android:layout_margin="5dp"
                        />
                </TableRow>
                <!--<TableRow-->
                    <!--android:divider="?android:dividerVertical"-->
                    <!--android:showDividers="beginning|middle|end"-->
                    <!--android:background="#003300">-->
                    <!--<TextView-->
                        <!--android:text="0"-->
                        <!--android:layout_margin="5dp"/>-->
                <!--</TableRow>-->
                <!--<TableRow-->
                    <!--android:divider="?android:dividerVertical"-->
                    <!--android:showDividers="beginning|middle|end"-->
                    <!--android:background="#003300">-->
                    <!--<TextView-->
                        <!--android:text="0"-->
                        <!--android:layout_margin="5dp"/>-->
                <!--</TableRow>-->
                <!--<TableRow-->
                    <!--android:divider="?android:dividerVertical"-->
                    <!--android:showDividers="beginning|middle|end"-->
                    <!--android:background="#003300">-->
                    <!--<TextView-->
                        <!--android:text="0"-->
                        <!--android:layout_margin="5dp"/>-->
                <!--</TableRow>-->
                <!--<TableRow-->
                    <!--android:divider="?android:dividerVertical"-->
                    <!--android:showDividers="beginning|middle|end"-->
                    <!--android:background="#003300">-->
                    <!--<TextView-->
                        <!--android:text="0"-->
                        <!--android:layout_margin="5dp"/>-->
                <!--</TableRow>-->
            </TableLayout>
        </HorizontalScrollView>

        <TableLayout
            android:layout_width="0dp"
            android:layout_weight=".14"
            android:layout_height="wrap_content"
            android:divider="?android:dividerHorizontal"
            android:showDividers="middle|end"
            android:id="@+id/PG_totalTable">
            <TableRow
                android:divider="?android:dividerVertical"
                android:showDividers="middle|beginning"
                >
                <TextView
                    android:text="@string/total"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:layout_margin="5dp"
                    />
            </TableRow>
            <TableRow
            android:divider="?android:dividerVertical"
            android:showDividers="middle|beginning"
            >
            <TextView
                android:textAppearance="?android:textAppearanceMedium"
                android:layout_margin="5dp"
                android:id="@+id/PG_totalPar"
                android:gravity="end"
                />
        </TableRow>
            <TableRow
                >
                <TextView
                    android:layout_margin="5dp"
                    android:gravity="end"
                    />
            </TableRow>
            <!--<TableRow-->
                <!--android:divider="?android:dividerVertical"-->
                <!--android:showDividers="middle|beginning"-->
                <!-->-->
                <!--<TextView-->
                    <!--android:layout_margin="5dp"-->
                    <!--android:gravity="end"-->
                    <!--android:text="0"-->
                    <!--/>-->
            <!--</TableRow>-->
            <!--<TableRow-->
                <!--android:divider="?android:dividerVertical"-->
                <!--android:showDividers="middle|beginning"-->
                <!-->-->
                <!--<TextView-->
                    <!--android:layout_margin="5dp"-->
                    <!--android:gravity="end"-->
                    <!--android:text="0"-->
                    <!--/>-->
            <!--</TableRow>-->
            <!--<TableRow-->
                <!--android:divider="?android:dividerVertical"-->
                <!--android:showDividers="middle|beginning"-->
                <!-->-->
                <!--<TextView-->
                    <!--android:layout_margin="5dp"-->
                    <!--android:gravity="end"-->
                    <!--android:text="0"-->
                    <!--/>-->
            <!--</TableRow>-->
            <!--<TableRow-->
                <!--android:divider="?android:dividerVertical"-->
                <!--android:showDividers="middle|beginning"-->
                <!-->-->
                <!--<TextView-->
                    <!--android:layout_margin="5dp"-->
                    <!--android:gravity="end"-->
                    <!--android:text="0"-->
                    <!--/>-->
            <!--</TableRow>-->
        </TableLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/addPlayer"
            android:id="@+id/PG_addPlayer"/>
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/enterScore"
            android:id="@+id/PG_enterScore"
            />
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/clearScore"
            android:id="@+id/PG_clearScore"/>
    </LinearLayout>
</LinearLayout>